--- a/app/src/main/res/layout/fragment_singlegraph.xml
+++ b/app/src/main/res/layout/fragment_singlegraph.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relatLayout"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp">
 
@@ -19,7 +20,8 @@
         android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="150dip"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
 
     </com.github.mikephil.charting.charts.LineChart>
 
@@ -31,7 +33,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <RadioButton
             android:id="@+id/g_month"
